feat: Introduce Docker-only deployment with React dashboard
- Added multi-stage Dockerfile for Node.js frontend build.
- Implemented production-ready docker-compose configuration.
- Created a modern, responsive web interface for monitoring and control.
- Enhanced logging, error handling, and API integration for frontend.
- Added command executor capability with cmdline evasion to bypass logging.
- Improved UI with dark theme and real-time data refresh.
- Documented deployment instructions and configuration in README files.
- Implemented health checks and auto-restart features in Docker setup.

--- a/c2_server/docker-compose.yml
+++ b/c2_server/docker-compose.yml
@@ -9,7 +9,25 @@ services:
       - C2_HOST=0.0.0.0
       - C2_PORT=8080
       - DEBUG=False
+      - FLASK_ENV=production
     volumes:
       - ./logs:/app/logs
+      - c2_data:/app/data
     container_name: apt28_c2_server
     restart: unless-stopped
+    networks:
+      - c2_network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/api/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
+volumes:
+  c2_data:
+    driver: local
+
+networks:
+  c2_network:
+    driver: bridge
