--- a/c2_server/Dockerfile
+++ b/c2_server/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /frontend
 
 # Copy frontend package files
 COPY frontend/package*.json ./
-RUN npm ci
+RUN npm install
 
 # Copy frontend source and build
 COPY frontend/ ./
