feat: Implement PostgreSQL database support and update Docker configuration

--- a/c2_server/Dockerfile
+++ b/c2_server/Dockerfile
@@ -15,6 +15,12 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
+# Install system dependencies for PostgreSQL
+RUN apt-get update && apt-get install -y \
+    libpq-dev \
+    gcc \
+    && rm -rf /var/lib/apt/lists/*
+
 # Install dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
@@ -22,6 +28,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy application
 COPY app.py .
 COPY cli.py .
+COPY models.py .
 
 # Copy frontend build from previous stage
 COPY --from=frontend-build /frontend/build ./static
