--- a/c2_server/docker-compose.yml
+++ b/c2_server/docker-compose.yml
@@ -1,4 +1,22 @@
 services:
+  postgres:
+    image: postgres:16-alpine
+    container_name: apt28_postgres
+    restart: unless-stopped
+    environment:
+      - POSTGRES_DB=c2_database
+      - POSTGRES_USER=c2_admin
+      - POSTGRES_PASSWORD=c2_secure_password_change_me
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - c2_network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U c2_admin -d c2_database"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   c2_server:
     build: .
     ports:
@@ -8,6 +26,7 @@ services:
       - C2_PORT=8080
       - DEBUG=False
       - FLASK_ENV=production
+      - DATABASE_URL=postgresql://c2_admin:c2_secure_password_change_me@postgres:5432/c2_database
     volumes:
       - ./logs:/app/logs
       - c2_data:/app/data
@@ -15,6 +34,9 @@ services:
     restart: unless-stopped
     networks:
       - c2_network
+    depends_on:
+      postgres:
+        condition: service_healthy
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/api/health"]
       interval: 30s
@@ -24,6 +46,8 @@ services:
 
 volumes:
   c2_data:
+    driver: local
+  postgres_data:
     driver: local
 
 networks:
