--- a/.github/workflows/build_and_release.yaml
+++ b/.github/workflows/build_and_release.yaml
@@ -25,7 +25,7 @@ jobs:
     - name: Compile DLL for COM Hijacking
       run: |
         cd src
-        & gcc -shared main.c -o ..\output\apt28.dll exports.def -s -m64 -Wall -Wextra -Wl,--subsystem,windows -Wl,--gc-sections -Wl,--strip-all -lws2_32 -lwininet -lgdi32 -lole32 -loleaut32 -luuid -lntdll -lwinmm -lpsapi -luser32 -lkernel32 -liphlpapi -ladvapi32
+        & gcc -shared main.c -o ..\output\apt28.dll exports.def -s -m64 -Wall -Wextra "-Wl,--subsystem,windows" "-Wl,--gc-sections" "-Wl,--strip-all" -lws2_32 -lwininet -lgdi32 -lole32 -loleaut32 -luuid -lntdll -lwinmm -lpsapi -luser32 -lkernel32 -liphlpapi -ladvapi32
         if ($LASTEXITCODE -ne 0) {
           Write-Error "Compilation failed"
           exit 1
